修改nlog配置/部分LOG改用Logger

--- a/GPMVehicleControlSystem/nlog.config
+++ b/GPMVehicleControlSystem/nlog.config
@@ -3,12 +3,15 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
       internalLogLevel="Info"
-      internalLogFile="c:\temp\internal-nlog-AspNetCore.txt">
+      internalLogFile="internal-nlog-AspNetCore.txt">
 
 	<!-- enable asp.net core layout renderers -->
 	<extensions>
 		<add assembly="NLog.Web.AspNetCore"/>
 	</extensions>
+
+	<!-- 變數:LOG位置 -->
+	<variable name="logDirectory" value="C:/Users/USER/Documents/GPM_AGV_LOG" />
 
 	<!-- the targets to write to -->
 	<targets>
@@ -17,14 +20,17 @@
 				layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}" />-->
 
 		<!-- 文件目标，根據日期和類別名稱分資料夾 -->
-		<target xsi:type="File" name="fileTarget" fileName="C:/Users/USER/Documents/GPM_AGV_LOG/${date:format=yyyy-MM-dd}/${logger}/${date:format=yyyy-MM-dd HH}.log"
+		<target xsi:type="File" name="fileTarget" fileName="${logDirectory}/${date:format=yyyy-MM-dd}/${logger:shortName=true}/${date:format=yyyy-MM-dd HH}.log"
 				layout="${longdate} |${level}| ${message}  ${exception:format=ToString,Data:maxInnerExceptionLevel=10}" />
-		<!-- 文件目标，根據日期和類別名稱分資料夾 -->
-		<target xsi:type="File" name="all-in-one" fileName="C:/Users/USER/Documents/GPM_AGV_LOG/${date:format=yyyy-MM-dd}/${date:format=yyyy-MM-dd HH}.log"
+
+		<target xsi:type="File" name="handshake" fileName="${logDirectory}/${date:format=yyyy-MM-dd}/${logger}/${date:format=yyyy-MM-dd HH}.log"
+				layout="${longdate} |${level}| ${message}  ${exception:format=ToString,Data:maxInnerExceptionLevel=10}" />
+
+		<target xsi:type="File" name="all-in-one" fileName="${logDirectory}/${date:format=yyyy-MM-dd}/${date:format=yyyy-MM-dd HH}.log"
 				layout="${longdate} |${level}| ${message}  ${exception:format=ToString,Data:maxInnerExceptionLevel=10}" />
 
 		<!-- File Target for own log messages with extra web details using some ASP.NET core renderers -->
-		<target xsi:type="File" name="ownFile-web" fileName="C:/Users/USER/Documents/GPM_AGV_LOG/${date:format=yyyy-MM-dd}/nlog-AspNetCore-own-${shortdate}.log"
+		<target xsi:type="File" name="ownFile-web" fileName="${logDirectory}/${date:format=yyyy-MM-dd}/nlog-AspNetCore-own-${shortdate}.log"
 				layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}|${callsite}" />
 
 		<!--Console Target for hosting lifetime messages to improve Docker / Visual Studio startup detection -->
@@ -39,7 +45,7 @@
 		<logger name="System.Net.Http.*" minlevel="Info" final="true" />
 		<logger name="Microsoft.*"  maxlevel="Warning"  final="true" />
 
-		<!--All logs, including from Microsoft-->
+		<logger name="HandshakeLog" minlevel="Trace" writeTo = "handshake" final="true" />
 		<logger name="*" minlevel="Trace" writeTo="fileTarget" />
 
 		<logger name="AGVSystemCommonNet6.AGVDispatch.*"  maxlevel="Warning"  final="true" />
