--- a/GPMVehicleControlSystem/GPMVehicleControlSystem.csproj
+++ b/GPMVehicleControlSystem/GPMVehicleControlSystem.csproj
@@ -3,7 +3,7 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
-		<AssemblyVersion>2.7.0</AssemblyVersion>
+		<AssemblyVersion>2.7.208</AssemblyVersion>
 		<InformationalVersion>2.7.0</InformationalVersion>
 		<AssemblyName>GPM_VCS</AssemblyName>
 		<NoWarn>4014</NoWarn>
@@ -139,6 +139,9 @@
 		<None Update="wwwroot">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</None>
+	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Tools\CPUUsage\" />
 	</ItemGroup>
 	<ProjectExtensions>
 		<VisualStudio>
