--- a/GPMVehicleControlSystem/nlog.config
+++ b/GPMVehicleControlSystem/nlog.config
@@ -20,21 +20,22 @@
 				layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}" />-->
 
 		<!-- 文件目标，根據日期和類別名稱分資料夾 -->
-		<target xsi:type="File" name="fileTarget" fileName="${logDirectory}/${date:format=yyyy-MM-dd}/${logger:shortName=true}/${date:format=yyyy-MM-dd HH}.log"
+		<target xsi:type="File" keepFileOpen="false" concurrentWrites="true"  name="fileTarget" fileName="${logDirectory}/${date:format=yyyy-MM-dd}/${logger:shortName=true}/${date:format=yyyy-MM-dd HH}.log"
 				layout="${longdate} |${level}| ${message}  ${exception:format=ToString,Data:maxInnerExceptionLevel=10}" />
 
-		<target xsi:type="File" name="handshake" fileName="${logDirectory}/${date:format=yyyy-MM-dd}/${logger}/${date:format=yyyy-MM-dd HH}.log"
+		<target xsi:type="File" keepFileOpen="false" concurrentWrites="true"  name="handshake" fileName="${logDirectory}/${date:format=yyyy-MM-dd}/${logger}/${date:format=yyyy-MM-dd HH}.log"
 				layout="${longdate} |${level}| ${message}  ${exception:format=ToString,Data:maxInnerExceptionLevel=10}" />
 
-		<target xsi:type="File" name="all-in-one" fileName="${logDirectory}/${date:format=yyyy-MM-dd}/${date:format=yyyy-MM-dd HH}.log"
+		<target xsi:type="File" keepFileOpen="false" concurrentWrites="true"  name="all-in-one" fileName="${logDirectory}/${date:format=yyyy-MM-dd}/${date:format=yyyy-MM-dd HH}.log"
 				layout="${longdate} |${level}| ${message}  ${exception:format=ToString,Data:maxInnerExceptionLevel=10}" />
 
 		<!-- File Target for own log messages with extra web details using some ASP.NET core renderers -->
-		<target xsi:type="File" name="ownFile-web" fileName="${logDirectory}/${date:format=yyyy-MM-dd}/nlog-AspNetCore-own-${shortdate}.log"
-				layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}|${callsite}" />
+		<target xsi:type="File" keepFileOpen="false" concurrentWrites="true" name="ownFile-web" fileName="${logDirectory}/${date:format=yyyy-MM-dd}/nlog-AspNetCore-own-${shortdate}.log"
+				layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}|${callsite}"/>
 
+		<target xsi:type="File" name="HandshakeLogByOrder" fileName="${logDirectory}/${date:format=yyyy-MM-dd}/${logger}.log" layout="${longdate}|${level:uppercase=true}|${message}" keepFileOpen="false" concurrentWrites="true" />
 		<!--Console Target for hosting lifetime messages to improve Docker / Visual Studio startup detection -->
-		<target xsi:type="Console" name="console-log" layout="[${longdate}] |${level}| ${message}  ${exception:format=ToString,Data:maxInnerExceptionLevel=10}" />
+		<target xsi:type="Console" name="console-log"  keepFileOpen="false" concurrentWrites="true" layout="[${longdate}] |${level}| ${message}  ${exception:format=ToString,Data:maxInnerExceptionLevel=10}" />
 	</targets>
 
 	<!-- rules to map from logger name to target -->
@@ -46,6 +47,7 @@
 		<logger name="Microsoft.*"  maxlevel="Warning"  final="true" />
 
 		<logger name="HandshakeLog" minlevel="Trace" writeTo = "handshake" final="true" />
+		<logger name="HandshakeLogByOrder/*" minlevel="Trace" writeTo = "HandshakeLogByOrder" final="true" />
 		<logger name="*" minlevel="Trace" writeTo="fileTarget" />
 
 		<logger name="AGVSystemCommonNet6.AGVDispatch.*"  maxlevel="Warning"  final="true" />
