nlog預設輸出路徑變更->/home/gpm/GPM_AGV_LOG

--- a/GPMVehicleControlSystem/nlog.config
+++ b/GPMVehicleControlSystem/nlog.config
@@ -11,7 +11,7 @@
 	</extensions>
 
 	<!-- 變數:LOG位置 -->
-	<variable name="logDirectory" value="C:/Users/USER/Documents/GPM_AGV_LOG" />
+	<variable name="logDirectory" value="/home/gpm/GPM_AGV_LOG" />
 
 	<!-- the targets to write to -->
 	<targets>
