--- a/GPMVehicleControlSystem/nlog.config
+++ b/GPMVehicleControlSystem/nlog.config
@@ -15,25 +15,29 @@
 
 	<!-- the targets to write to -->
 	<targets>
-		<!-- File Target for all log messages with basic details -->
-		<!--<target xsi:type="File" name="allfile" fileName="c:\temp\nlog-AspNetCore-all-${shortdate}.log"
-				layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}" />-->
-
 		<!-- 文件目标，根據日期和類別名稱分資料夾 -->
-		<target xsi:type="File" name="fileTarget" fileName="${logDirectory}/${date:format=yyyy-MM-dd}/${logger:shortName=true}/${date:format=yyyy-MM-dd HH}.log"
-				layout="${longdate} |${level}| ${message}  ${exception:format=ToString,Data:maxInnerExceptionLevel=10}" />
+		<target xsi:type="AsyncWrapper" name="asyncFileTarget">
+			<target xsi:type="File" name="fileTarget" fileName="${logDirectory}/${date:format=yyyy-MM-dd}/${logger:shortName=true}/${date:format=yyyy-MM-dd HH}.log"
+					layout="${longdate} |${level}| ${message}  ${exception:format=ToString,Data:maxInnerExceptionLevel=10}" />
+		</target>
 
-		<target xsi:type="File" name="handshake" fileName="${logDirectory}/${date:format=yyyy-MM-dd}/${logger}/${date:format=yyyy-MM-dd HH}.log"
-				layout="${longdate} |${level}| ${message}  ${exception:format=ToString,Data:maxInnerExceptionLevel=10}" />
+		<target xsi:type="AsyncWrapper" name="asyncHandshake">
+			<target xsi:type="File" name="handshake" fileName="${logDirectory}/${date:format=yyyy-MM-dd}/${logger}/${date:format=yyyy-MM-dd HH}.log"
+					layout="${longdate} |${level}| ${message}  ${exception:format=ToString,Data:maxInnerExceptionLevel=10}" />
+		</target>
 
-		<target xsi:type="File" name="all-in-one" fileName="${logDirectory}/${date:format=yyyy-MM-dd}/${date:format=yyyy-MM-dd HH}.log"
-				layout="${longdate} |${level}| ${message}  ${exception:format=ToString,Data:maxInnerExceptionLevel=10}" />
+		<target xsi:type="AsyncWrapper" name="asyncAllInOne">
+			<target xsi:type="File" name="all-in-one" fileName="${logDirectory}/${date:format=yyyy-MM-dd}/${date:format=yyyy-MM-dd HH}.log"
+					layout="${longdate} |${level}| ${message}  ${exception:format=ToString,Data:maxInnerExceptionLevel=10}" />
+		</target>
 
-		<!-- File Target for own log messages with extra web details using some ASP.NET core renderers -->
-		<target xsi:type="File" name="ownFile-web" fileName="${logDirectory}/${date:format=yyyy-MM-dd}/nlog-AspNetCore-own-${shortdate}.log"
-				layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}|${callsite}" />
+		<!-- 自己的日志文件目标，使用一些 ASP.NET 核心渲染器添加额外的 Web 详细信息 -->
+		<target xsi:type="AsyncWrapper" name="asyncOwnFileWeb">
+			<target xsi:type="File" name="ownFile-web" fileName="${logDirectory}/${date:format=yyyy-MM-dd}/nlog-AspNetCore-own-${shortdate}.log"
+					layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}|${callsite}" />
+		</target>
 
-		<!--Console Target for hosting lifetime messages to improve Docker / Visual Studio startup detection -->
+		<!-- 用于托管生命周期消息的控制台目标，以改善 Docker / Visual Studio 启动检测 -->
 		<target xsi:type="Console" name="console-log" layout="[${longdate}] |${level}| ${message}  ${exception:format=ToString,Data:maxInnerExceptionLevel=10}" />
 	</targets>
 
@@ -45,14 +49,14 @@
 		<logger name="System.Net.Http.*" minlevel="Info" final="true" />
 		<logger name="Microsoft.*"  maxlevel="Warning"  final="true" />
 
-		<logger name="HandshakeLog" minlevel="Trace" writeTo = "handshake" final="true" />
-		<logger name="*" minlevel="Trace" writeTo="fileTarget" />
+		<logger name="HandshakeLog" minlevel="Trace" writeTo="asyncHandshake" final="true" />
+		<logger name="*" minlevel="Trace" writeTo="asyncFileTarget" />
 
 		<logger name="AGVSystemCommonNet6.AGVDispatch.*"  maxlevel="Warning"  final="true" />
-		<logger name="*" minlevel="Trace" writeTo="all-in-one" />
+		<logger name="*" minlevel="Trace" writeTo="asyncAllInOne" />
 		<logger name="*" minlevel="Info" writeTo="console-log" />
 		<!--Output hosting lifetime messages to console target for faster startup detection -->
-		<logger name="*" minlevel="Info" writeTo="ownFile-web" />
+		<logger name="*" minlevel="Info" writeTo="asyncOwnFileWeb" />
 
 	</rules>
 </nlog>
