--- a/GPMVehicleControlSystem/nlog.config
+++ b/GPMVehicleControlSystem/nlog.config
@@ -16,23 +16,23 @@
 	<!-- the targets to write to -->
 	<targets>
 		<!-- 文件目标，根據日期和類別名稱分資料夾 -->
-		<target xsi:type="AsyncWrapper" name="asyncFileTarget">
+		<target xsi:type="AsyncWrapper" name="asyncFileTarget" bufferSize="5000" overflowAction="Grow" timeToSleepBetweenBatches="1000" batchSize="100">
 			<target xsi:type="File" name="fileTarget" fileName="${logDirectory}/${date:format=yyyy-MM-dd}/${logger:shortName=true}/${date:format=yyyy-MM-dd HH}.log"
 					layout="${longdate} |${level}| ${message}  ${exception:format=ToString,Data:maxInnerExceptionLevel=10}" />
 		</target>
 
-		<target xsi:type="AsyncWrapper" name="asyncHandshake">
+		<target xsi:type="AsyncWrapper" name="asyncHandshake" bufferSize="5000" overflowAction="Grow" timeToSleepBetweenBatches="1000" batchSize="100">
 			<target xsi:type="File" name="handshake" fileName="${logDirectory}/${date:format=yyyy-MM-dd}/${logger}/${date:format=yyyy-MM-dd HH}.log"
 					layout="${longdate} |${level}| ${message}  ${exception:format=ToString,Data:maxInnerExceptionLevel=10}" />
 		</target>
 
-		<target xsi:type="AsyncWrapper" name="asyncAllInOne">
+		<target xsi:type="AsyncWrapper" name="asyncAllInOne" bufferSize="5000" overflowAction="Grow" timeToSleepBetweenBatches="1000" batchSize="100">
 			<target xsi:type="File" name="all-in-one" fileName="${logDirectory}/${date:format=yyyy-MM-dd}/${date:format=yyyy-MM-dd HH}.log"
 					layout="${longdate} |${level}| ${message}  ${exception:format=ToString,Data:maxInnerExceptionLevel=10}" />
 		</target>
 
 		<!-- 自己的日志文件目标，使用一些 ASP.NET 核心渲染器添加额外的 Web 详细信息 -->
-		<target xsi:type="AsyncWrapper" name="asyncOwnFileWeb">
+		<target xsi:type="AsyncWrapper" name="asyncOwnFileWeb" bufferSize="5000" overflowAction="Grow" timeToSleepBetweenBatches="1000" batchSize="100">
 			<target xsi:type="File" name="ownFile-web" fileName="${logDirectory}/${date:format=yyyy-MM-dd}/nlog-AspNetCore-own-${shortdate}.log"
 					layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}|${callsite}" />
 		</target>
