--- a/GPMVehicleControlSystem/nlog.config
+++ b/GPMVehicleControlSystem/nlog.config
@@ -53,6 +53,7 @@
 		<logger name="*" minlevel="Trace" writeTo="asyncFileTarget" />
 
 		<logger name="AGVSystemCommonNet6.AGVDispatch.*"  maxlevel="Warning"  final="true" />
+		<logger name="SystemLoadingMonitorBackgroundServeice"  maxlevel="Info"  final="true" />
 		<logger name="*" minlevel="Trace" writeTo="asyncAllInOne" />
 		<logger name="*" minlevel="Info" writeTo="console-log" />
 		<!--Output hosting lifetime messages to console target for faster startup detection -->
