--- a/GPMVehicleControlSystem/nlog.config
+++ b/GPMVehicleControlSystem/nlog.config
@@ -47,13 +47,14 @@
 		<!-- 忽略規則 |  maxlevel="Warning" => 表示僅記錄Warning以上 -->
 		<logger name="Microsoft.Hosting.Lifetime" minlevel="Info" final="true" />
 		<logger name="System.Net.Http.*" minlevel="Info" final="true" />
-		<logger name="Microsoft.*"  maxlevel="Warning"  final="true" />
-
+		<logger name="Microsoft.*"  maxlevel="Warning" final="true" />
+		<logger name="HttpHelperLog" maxlevel="Warning" writeTo="" final="true"/>
+		<logger name="GPMVehicleControlSystem.Tools.LinuxTools" writeTo="asyncFileTarget" final="true"/>
+		<logger name="GPMVehicleControlSystem.Service.SystemLoadingMonitorBackgroundServeice" writeTo="console-log" final="true"/>
 		<logger name="HandshakeLog" minlevel="Trace" writeTo="asyncHandshake" final="true" />
-		<logger name="*" minlevel="Trace" writeTo="asyncFileTarget" />
-
 		<logger name="AGVSystemCommonNet6.AGVDispatch.*"  maxlevel="Warning"  final="true" />
 		<logger name="SystemLoadingMonitorBackgroundServeice"  maxlevel="Info"  final="true" />
+		<logger name="*" minlevel="Trace" writeTo="asyncFileTarget" />
 		<logger name="*" minlevel="Trace" writeTo="asyncAllInOne" />
 		<logger name="*" minlevel="Info" writeTo="console-log" />
 		<!--Output hosting lifetime messages to console target for faster startup detection -->
