--- a/GPMVehicleControlSystem/nlog.config
+++ b/GPMVehicleControlSystem/nlog.config
@@ -49,8 +49,8 @@
 		<logger name="System.Net.Http.*" minlevel="Info" final="true" />
 		<logger name="Microsoft.*"  maxlevel="Warning" final="true" />
 		<logger name="HttpHelperLog" maxlevel="Warning" writeTo="" final="true"/>
-		<logger name="GPMVehicleControlSystem.Tools.LinuxTools" writeTo="asyncFileTarget" final="true"/>
-		<logger name="GPMVehicleControlSystem.Service.SystemLoadingMonitorBackgroundServeice" writeTo="console-log" final="true"/>
+		<logger name="GPMVehicleControlSystem.Tools.LinuxTools" writeTo="" final="true"/>
+		<logger name="GPMVehicleControlSystem.Service.SystemLoadingMonitorBackgroundServeice" writeTo="" final="true"/>
 		<logger name="HandshakeLog" minlevel="Trace" writeTo="asyncHandshake" final="true" />
 		<logger name="AGVSystemCommonNet6.AGVDispatch.*"  maxlevel="Warning"  final="true" />
 		<logger name="SystemLoadingMonitorBackgroundServeice"  maxlevel="Info"  final="true" />
