修正更新流程與 APlay 新增 logger

--- a/GPMVehicleControlSystem/nlog.config
+++ b/GPMVehicleControlSystem/nlog.config
@@ -50,10 +50,9 @@
 		<logger name="Microsoft.*"  maxlevel="Warning" final="true" />
 		<logger name="HttpHelperLog" maxlevel="Warning" writeTo="" final="true"/>
 		<logger name="GPMVehicleControlSystem.Tools.LinuxTools" writeTo="" final="true"/>
-		<logger name="GPMVehicleControlSystem.Service.SystemLoadingMonitorBackgroundServeice" writeTo="" final="true"/>
+		<logger name="GPMVehicleControlSystem.Service.SystemLoadingMonitorBackgroundServeice" writeTo="asyncFileTarget" final="true"/>
 		<logger name="HandshakeLog" minlevel="Trace" writeTo="asyncHandshake" final="true" />
 		<logger name="AGVSystemCommonNet6.AGVDispatch.*"  maxlevel="Warning"  final="true" />
-		<logger name="SystemLoadingMonitorBackgroundServeice"  maxlevel="Info"  final="true" />
 		<logger name="*" minlevel="Trace" writeTo="asyncFileTarget" />
 		<logger name="*" minlevel="Trace" writeTo="asyncAllInOne" />
 		<logger name="*" minlevel="Info" writeTo="console-log" />
