新增重啟AGVC的功能，包含新的控制器方法及相關的訂閱和取消訂閱功能，並新增重啟腳本檔案以支援AGVC重啟。

--- a/GPMVehicleControlSystem/GPMVehicleControlSystem.csproj
+++ b/GPMVehicleControlSystem/GPMVehicleControlSystem.csproj
@@ -39,8 +39,8 @@
 	</PropertyGroup>
 	<PropertyGroup>
 		<RestorePackages>false</RestorePackages>
-		<AssemblyVersion>3.2.24</AssemblyVersion>
-		<FileVersion>3.2.24</FileVersion>
+		<AssemblyVersion>3.2.25</AssemblyVersion>
+		<FileVersion>3.2.25</FileVersion>
 	</PropertyGroup>
 	<ItemGroup>
 		<None Remove="src\IO_Wago.ini" />
@@ -115,6 +115,9 @@
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</None>
 		<None Update="create_update_file_zip_with_wwwroot.bat">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
+		<None Update="restart_agvc.sh">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</None>
 		<None Update="src\IO_Wago_Fork_AGV.ini">
