--- a/GPMVehicleControlSystem/nlog.config
+++ b/GPMVehicleControlSystem/nlog.config
@@ -15,7 +15,7 @@
 
 	<!-- the targets to write to -->
 	<targets>
-		<!-- 文件目标，根據日期和類別名稱分資料夾 -->
+		<!-- 文件目標，根據日期和類別名稱分資料夾 -->
 		<target xsi:type="AsyncWrapper" name="asyncFileTarget" bufferSize="5000" overflowAction="Grow" timeToSleepBetweenBatches="1000" batchSize="100">
 			<target xsi:type="File" name="fileTarget" fileName="${logDirectory}/${date:format=yyyy-MM-dd}/${logger:shortName=true}/${date:format=yyyy-MM-dd HH}.log"
 					layout="${longdate} |${level}| ${message}  ${exception:format=ToString,Data:maxInnerExceptionLevel=10}" />
@@ -31,13 +31,11 @@
 					layout="${longdate} |${level}| ${message}  ${exception:format=ToString,Data:maxInnerExceptionLevel=10}" />
 		</target>
 
-		<!-- 自己的日志文件目标，使用一些 ASP.NET 核心渲染器添加额外的 Web 详细信息 -->
 		<target xsi:type="AsyncWrapper" name="asyncOwnFileWeb" bufferSize="5000" overflowAction="Grow" timeToSleepBetweenBatches="1000" batchSize="100">
 			<target xsi:type="File" name="ownFile-web" fileName="${logDirectory}/${date:format=yyyy-MM-dd}/nlog-AspNetCore-own-${shortdate}.log"
 					layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}|${callsite}" />
 		</target>
 
-		<!-- 用于托管生命周期消息的控制台目标，以改善 Docker / Visual Studio 启动检测 -->
 		<target xsi:type="Console" name="console-log" layout="[${longdate}] |${level}| ${message}  ${exception:format=ToString,Data:maxInnerExceptionLevel=10}" />
 	</targets>
 
@@ -52,7 +50,7 @@
 		<logger name="GPMVehicleControlSystem.Tools.LinuxTools" writeTo="" final="true"/>
 		<logger name="GPMVehicleControlSystem.Service.SystemLoadingMonitorBackgroundServeice" writeTo="asyncFileTarget" final="true"/>
 		<logger name="HandshakeLog" minlevel="Trace" writeTo="asyncHandshake" final="true" />
-		<logger name="AGVSystemCommonNet6.AGVDispatch.*"  maxlevel="Warning"  final="true" />
+		<logger name="AGVSystemCommonNet6.AGVDispatch.*"  maxlevel="Warning" writeTo="asyncFileTarget" final="true" />
 		<logger name="*" minlevel="Trace" writeTo="asyncFileTarget" />
 		<logger name="*" minlevel="Trace" writeTo="asyncAllInOne" />
 		<logger name="*" minlevel="Info" writeTo="console-log" />
