更新版本管理與壓縮邏輯
- 更新 `.gitignore`，排除 `version.json` 檔案。
- 在 `SystemController.cs` 中新增 `VersionOptions` 參數，並實作 `GetVersionInfo` API 端點以返回版本資訊。
- 修改 `GPMVehicleControlSystem.csproj`，將 `CheckGitClean` 預設值改為 `false`，並調整版本 JSON 生成的目標名稱。
- 新增 `VersionOptions` 類別以儲存版本號和提交記錄。
- 在 `Program.cs` 中新增從 `version.json` 讀取配置的邏輯。
- 重構 `VehicleFactoryService.cs` 中的車輛實例創建邏輯，改善異步處理的穩定性。
- 在 `create-patch-zip-file.ps1` 中新增參數以控制是否包含 `wwwroot` 目錄，並改進壓縮檔案的生成邏輯。

--- a/GPMVehicleControlSystem/GPMVehicleControlSystem.csproj
+++ b/GPMVehicleControlSystem/GPMVehicleControlSystem.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 	<PropertyGroup>
 		<!-- 若要在建置前檢查是否有尚未commit的檔案請將布林值改為 true -->
-		<CheckGitClean Condition="'$(CHECK_GIT_CLEAN)' == ''">true</CheckGitClean>
+		<CheckGitClean Condition="'$(CHECK_GIT_CLEAN)' == ''">false</CheckGitClean>
 	</PropertyGroup>
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
@@ -197,12 +197,20 @@
 		<WriteLinesToFile File="PublishOutputDirectory.txt" Lines="$(PublishDir)" Overwrite="true" />
 	</Target>
 
-	<Target Name="GenerateVersionJson" AfterTargets="Compile">
+	<Target Name="GenerateVersionJson_Complie" AfterTargets="Build">
 		<Exec Command="powershell -ExecutionPolicy Bypass -File &quot;generate-version.ps1&quot; &quot;$(OutputDir).&quot; &quot;$(AssemblyVersion)&quot;" />
 	</Target>
 
-	<Target Name="GenerateVersionJson" AfterTargets="Publish">
+	<Target Name="GenerateVersionJson_Pub" AfterTargets="Publish">
 		<Exec Command="powershell -ExecutionPolicy Bypass -File &quot;generate-version.ps1&quot; &quot;$(PublishDir).&quot; &quot;$(AssemblyVersion)&quot;" />
+	</Target>
+
+	<Target Name="CreatePathchZipFile_WithWWWROOT" AfterTargets="Publish">
+		<Exec Command="powershell -ExecutionPolicy Bypass -File &quot;create-patch-zip-file.ps1&quot; &quot;$(PublishDir).&quot; &quot;true&quot;" />
+	</Target>
+
+	<Target Name="CreatePathchZipFile" AfterTargets="Publish">
+		<Exec Command="powershell -ExecutionPolicy Bypass -File &quot;create-patch-zip-file.ps1&quot; &quot;$(PublishDir).&quot; &quot;false&quot;" />
 	</Target>
 
 	<Target Name="CheckGitStatusBeforePublish" BeforeTargets="Publish" Condition="'$(CheckGitClean)' == 'true'">
