修改 SystemLoadingMonitor logger 規則

--- a/GPMVehicleControlSystem/nlog.config
+++ b/GPMVehicleControlSystem/nlog.config
@@ -48,7 +48,7 @@
 		<logger name="Microsoft.*"  maxlevel="Warning" final="true" />
 		<logger name="HttpHelperLog" maxlevel="Warning" writeTo="" final="true"/>
 		<logger name="GPMVehicleControlSystem.Tools.LinuxTools" writeTo="" final="true"/>
-		<logger name="GPMVehicleControlSystem.Service.SystemLoadingMonitorBackgroundServeice" writeTo="asyncFileTarget" final="true"/>
+		<logger name="SystemLoadingMonitor" writeTo="asyncFileTarget" final="true"/>
 		<logger name="HandshakeLog" minlevel="Trace" writeTo="asyncHandshake" final="true" />
 		<logger name="AGVSystemCommonNet6.AGVDispatch.*"  maxlevel="Warning" writeTo="asyncFileTarget" final="true" />
 		<logger name="*" minlevel="Trace" writeTo="asyncFileTarget" />
