修改 nlog.config / 新增刪除版本備份檔案 API 與實作/更新前端資源

--- a/GPMVehicleControlSystem/nlog.config
+++ b/GPMVehicleControlSystem/nlog.config
@@ -18,25 +18,25 @@
 		<!-- 文件目標，根據日期和類別名稱分資料夾 -->
 		<target xsi:type="AsyncWrapper" name="asyncFileTarget" bufferSize="5000" overflowAction="Grow" timeToSleepBetweenBatches="1000" batchSize="100">
 			<target xsi:type="File" name="fileTarget" fileName="${logDirectory}/${date:format=yyyy-MM-dd}/${logger:shortName=true}/${date:format=yyyy-MM-dd HH}.log"
-					layout="${longdate} |${level}| ${message}  ${exception:format=ToString,Data:maxInnerExceptionLevel=10}" />
+					layout="${longdate} |${level}| ${message}  ${exception:format=ToString,Data:maxInnerExceptionLevel=10}" autoFlush="true"/>
 		</target>
 
 		<target xsi:type="AsyncWrapper" name="asyncHandshake" bufferSize="5000" overflowAction="Grow" timeToSleepBetweenBatches="1000" batchSize="100">
 			<target xsi:type="File" name="handshake" fileName="${logDirectory}/${date:format=yyyy-MM-dd}/${logger}/${date:format=yyyy-MM-dd HH}.log"
-					layout="${longdate} |${level}| ${message}  ${exception:format=ToString,Data:maxInnerExceptionLevel=10}" />
+					layout="${longdate} |${level}| ${message}  ${exception:format=ToString,Data:maxInnerExceptionLevel=10}" autoFlush="true"/>
 		</target>
 
 		<target xsi:type="AsyncWrapper" name="asyncAllInOne" bufferSize="5000" overflowAction="Grow" timeToSleepBetweenBatches="1000" batchSize="100">
 			<target xsi:type="File" name="all-in-one" fileName="${logDirectory}/${date:format=yyyy-MM-dd}/${date:format=yyyy-MM-dd HH}.log"
-					layout="${longdate} |${level}| ${message}  ${exception:format=ToString,Data:maxInnerExceptionLevel=10}" />
+					layout="${longdate} |${level}| ${message}  ${exception:format=ToString,Data:maxInnerExceptionLevel=10}" autoFlush="true" />
 		</target>
 
 		<target xsi:type="AsyncWrapper" name="asyncOwnFileWeb" bufferSize="5000" overflowAction="Grow" timeToSleepBetweenBatches="1000" batchSize="100">
 			<target xsi:type="File" name="ownFile-web" fileName="${logDirectory}/${date:format=yyyy-MM-dd}/nlog-AspNetCore-own-${shortdate}.log"
-					layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}|${callsite}" />
+					layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}|${callsite}" autoFlush="true" />
 		</target>
 
-		<target xsi:type="Console" name="console-log" layout="[${longdate}] |${level}| ${message}  ${exception:format=ToString,Data:maxInnerExceptionLevel=10}" />
+		<target xsi:type="Console" name="console-log" layout="[${longdate}] |${level}| ${message}  ${exception:format=ToString,Data:maxInnerExceptionLevel=10}" autoFlush="true" />
 	</targets>
 
 	<!-- rules to map from logger name to target -->
